--- a/scai/common/test/CMakeLists.txt
+++ b/scai/common/test/CMakeLists.txt
@@ -73,7 +73,10 @@ if    ( CUDA_FOUND AND USE_CUDA )
     add_subdirectory ( cuda )
 endif ( CUDA_FOUND AND USE_CUDA )
 
-###  copy xmltest.sh and configure code_coverage.sh (if USE_CODE_COVERAGE ) in build direcotry
+###  copy xmltest.sh script
 
-scai_test_scripts( SCRIPTS       xmltest.sh
-                   CODE_COVERAGE ${USE_CODE_COVERAGE} )
+scai_test_scripts( SCRIPTS       xmltest.sh )
+
+###  configure code_coverage.sh (if USE_CODE_COVERAGE ) in build direcotry
+
+scai_test_code_coverage( ${USE_CODE_COVERAGE} )
