--- a/scai/tasking/test/CMakeLists.txt
+++ b/scai/tasking/test/CMakeLists.txt
@@ -43,7 +43,11 @@ scai_unit_test( EXECUTABLE taskingTest
 
 scai_subdirectories( CUDA )
 
-###  copy xmltest.sh and configure code_coverage.sh (if USE_CODE_COVERAGE ) in build direcotry
+###  copy xmltest.sh script
 
-scai_test_scripts( SCRIPTS       xmltest.sh
-                   CODE_COVERAGE ${USE_CODE_COVERAGE} )
+scai_test_scripts( SCRIPTS       xmltest.sh )
+
+###  configure code_coverage.sh (if USE_CODE_COVERAGE ) in build direcotry
+
+scai_test_code_coverage( ${USE_CODE_COVERAGE} )
+
