--- a/scai/SCAIConfig.cmake.in
+++ b/scai/SCAIConfig.cmake.in
@@ -1,7 +1,5 @@
-# FindSCAI
-# --------
 #
-# Find SCAI Lama distribution.
+# SCAIConfig.cmake
 #
 # Result variables
 # ^^^^^^^^^^^^^^^^
@@ -18,40 +16,35 @@
 #   You should set( CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} ${SCAI_CXX_FLAGS} ) 
 # ``SCAI_FOUND``
 #   If false, do not try to use SCAI lama.
-# ``SCAI_VERSION_STRING``
+# ``SCAI_VERSION``
 #   the version of the SCAI library found.
 
 
-set ( SCAI_DEFINITIONS "-DSCAI_ASSERT_LEVEL_DEBUG -DSCAI_LOG_LEVEL_DEBUG -DSCAI_TRACE_ON" )
+set ( SCAI_DEFINITIONS  "-DSCAI_ASSERT_LEVEL_@SCAI_ASSERT_LEVEL@" 
+                        "-DSCAI_LOG_LEVEL_@SCAI_LOGGING_LEVEL@" 
+                        "-DSCAI_TRACE_@SCAI_TRACING@"  )
 
-set ( SCAI_CXX_FLAGS "-std=c++11 -fopenmp" )
+set ( SCAI_CXX_FLAGS "@CMAKE_CXX_FLAGS@" )
 
 set ( SCAI_ROOT /home/brandes/local/lama )
 
-set ( SCAI_INCLUDE_DIRS ${SCAI_ROOT}/include )
+set ( SCAI_INCLUDE_DIRS ${SCAI_ROOT}/include @SCAI_BOOST_INCLUDE_DIR@ @SCAI_CUDA_INCLUDE_DIR@ )
  
-set ( SCAI_MODULES common logging tracing tasking hmemo kregistry blaskernel utilskernel sparsekernel dmemo lama solver )
+set ( SCAI_MODULES @SCAI_DEFINED_MODULES@ )
+
+set ( SCAI_VERSION @SCAI_VERSION@ )
 
 set ( SCAI_LIBRARIES "" )
 
-foreach ( module ${SCAI_MODULES} )
+set ( SCAI_FOUND true )
 
-     message ( STATUS "Find ${module} library" )
+foreach ( module ${SCAI_MODULES} )
 
      find_library ( SCAI_LIBRARY_${module} 
                     NAMES scai_${module}
                     PATHS ${SCAI_ROOT}/lib )
 
-     message ( STATUS "Found lib ${SCAI_LIBRARY_${module}}" )
-
-     #  libraries are in reverse order to oder in SCAI_MODULES 
-
      set ( SCAI_LIBRARIES ${SCAI_LIBRARY_${module}} ${SCAI_LIBRARIES} )
 
 endforeach ()
-
-message ( STATUS "SCAI_LIBRARIES    = ${SCAI_LIBRARIES}" )
-message ( STATUS "SCAI_DEFINITIONS  = ${SCAI_DEFINITIONS}" )
-message ( STATUS "SCAI_INCLUDE_DIRS = ${SCAI_INCLUDE_DIR}" )
-message ( STATUS "SCAI_CXX_FLAGS    = ${SCAI_CXX_FLAGS}" )
 
