--- a/scai/tracing/examples/CMakeLists.txt
+++ b/scai/tracing/examples/CMakeLists.txt
@@ -38,14 +38,15 @@ include ( scai_macro/scai_run_script )
 include ( scai_function/scai_example_directory )
 
 # Explicitly enable tracing at compile time here
-set ( SCAI_TRACING_FLAG SCAI_TRACE_ON ) # also needed in prepareExamplesMakeInc for make.inc
 
 foreach ( executable TraceTest TraceCalls TraceThreads )
 
     scai_add_example( EXECUTABLE ${executable}.exe
                       FILES      ${executable}.cpp )
 
-    set_target_properties( ${executable}.exe PROPERTIES COMPILE_FLAGS -D${SCAI_TRACING_FLAG} )
+    # make sure that tracing is enabled
+
+    set_target_properties( ${executable}.exe PROPERTIES COMPILE_FLAGS -DSCAI_TRACE_ON )
 
 endforeach ( executable )
 
