Correced input file for general CMAKE configuration

--- a/scai/SCAIConfig.cmake.in
+++ b/scai/SCAIConfig.cmake.in
@@ -26,9 +26,9 @@ set ( SCAI_DEFINITIONS  "-DSCAI_ASSERT_LEVEL_@SCAI_ASSERT_LEVEL@"
 
 set ( SCAI_CXX_FLAGS "@CMAKE_CXX_FLAGS@" )
 
-set ( SCAI_ROOT /home/brandes/local/lama )
+set ( SCAI_ROOT @CMAKE_INSTALL_PREFIX@ )
 
-set ( SCAI_INCLUDE_DIRS ${SCAI_ROOT}/include @SCAI_BOOST_INCLUDE_DIR@ @SCAI_CUDA_INCLUDE_DIR@ )
+set ( SCAI_INCLUDE_DIRS ${SCAI_ROOT}/include @BOOST_INCLUDE_DIR@ @SCAI_CUDA_INCLUDE_DIR@ )
  
 set ( SCAI_MODULES @SCAI_DEFINED_MODULES@ )
 
