Added MatrixAssemblyAccess + test routines.

--- a/scai/lama/test/matrix/CMakeLists.txt
+++ b/scai/lama/test/matrix/CMakeLists.txt
@@ -51,6 +51,8 @@ scai_project (
         StencilMatrixTest
         DenseMatrixTest
 
+        MatrixAssemblyTest
+
         lamaMatrixTest
     )
 
