--- a/scai/lama/examples/io/CMakeLists.txt
+++ b/scai/lama/examples/io/CMakeLists.txt
@@ -36,7 +36,7 @@ include ( scai_macro/scai_add_example )
 include ( scai_macro/scai_example_makefile )
 include ( scai_macro/scai_run_script )
 
-foreach ( executable matrixConvert vectorConvert matrixRepartition vectorRepartition )
+foreach ( executable matrixRepartition vectorRepartition )
 
     scai_add_example( EXECUTABLE ${executable}.exe
                       FILES      ${executable}.cpp )
