Renamed BenchmarkFramework directory to pybench according naming conventions

--- a/scai/benchmark/CMakeLists.txt
+++ b/scai/benchmark/CMakeLists.txt
@@ -89,7 +89,7 @@ endforeach ( executable )
 
 install ( PROGRAMS  BenchmarkRunner DESTINATION bin )
 
-install( DIRECTORY BenchmarkFramework DESTINATION bin )
+install( DIRECTORY pybench DESTINATION bin )
 
 ## add custom target doc_${MODULE_NAME} to generate Sphinx user documentation 
 
